# stdin_to_modbus_shm

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  network.koesling.stdin-to-modbus-shm.yml  network.koesling.test-stdin-to-modbus-shm.yml
.github/workflows/: clang-format.yml  cmake.yml  flatpak.yml  flatpak_main.yml  flatpak_release.yml  flatpak_test.yml
cmake_files/: warnings.cmake
docs/: index.md
libs/: CMakeLists.txt
src/: CMakeLists.txt  InputParser.cpp  InputParser.hpp  InputParser_float.hpp  InputParser_int.hpp  SHM.cpp  input_parse.hpp  license.cpp  main.cpp  readline.hpp  split_string.hpp
